# subzero

./: Cargo.toml  LICENSE.md  README.md
runtime/: init.lua
runtime/lua/sz/: catalog.lua  complete.lua  fuzzy.lua  init.lua
src/: action.rs  app.rs  config.rs  event.rs  main.rs  theme.rs  tui.rs
src/cache/: mod.rs  store.rs
src/components/: background_tasks.rs  mod.rs  quit_dialog.rs  row_detail.rs  saved_queries.rs  top_bar.rs
src/components/explore/: columns_tab.rs  detail.rs  mod.rs  preview_tab.rs  search.rs  tree.rs
src/components/query/: history.rs  mod.rs  nvim_editor.rs  nvim_rpc.rs  results.rs
src/components/query/chart/: config.rs  mod.rs  prepare.rs  render.rs  settings.rs  types.rs
src/components/settings/: mod.rs  theme_pane.rs
src/snowflake/: client.rs  connection.rs  mod.rs  parser.rs
