[package]
name = "sz"
version = "0.1.2"
edition = "2024"

[dependencies]
async-trait = "0.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tui-textarea = "0.7"
tui-tree-widget = "0.23"
directories = "5"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
vt100 = "0.15"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
rmpv = "1"
tokio-util = { version = "0.7", features = ["compat"] }
